@@ -47,6 +47,8 @@ Improvements
 
 * SOLR-17050: Use compact JSON for Learning to Rank (LTR) feature and model storage. (Florin Babes, Christine Poerschke, Alessandro Benedetti)
 
+* SOLR-17094: Close objects contained inside an ObjectCache.  (Vincent Primault)
+
 Optimizations
 ---------------------
 * SOLR-17084: LBSolrClient (used by CloudSolrClient) now returns the count of core tracked as not live AKA zombies
